# books

./: .clangd  .gitignore  .pg_format  CLAUDE.md  CMakeLists.txt  Makefile  note.txt
sql/: schema.sql  seed.sql  setup.sql
src/: main.c  schema.h
